[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylog"
version = "0.1.0"
description = "Universal structured logging library for Python"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pylog"]
